--- a/theme/templates/accounts/account_profile_settings.html
+++ b/theme/templates/accounts/account_profile_settings.html
@@ -110,7 +110,7 @@
 		</a>	
 	</div>
 	<div class="four columns margin-bottom-5">
-		<a href="{% url 'shop_view' request.user %}" class="icon-box">
+		<a href="{% url 'shop_view' shop.slug %}" class="icon-box">
 				<span><i class="fa fa-shopping-bag" aria-hidden="true"></i></span>
 			<h3>Посмотреть магазин на сайте</h3>
 		</a>	
