--- a/theme/templates/filebrowser/custom_field.html
+++ b/theme/templates/filebrowser/custom_field.html
@@ -1,7 +1,7 @@
 {% load mezzanine_tags i18n %}
 <style>
 .mezz-fb-thumbnail {display:inline; margin-left:5px !important;}
-.mezz-fb-thumbnail img {width:20px; height:20px; margin-top:0 !important;}
+/*.mezz-fb-thumbnail img {width:60px; height:20px; margin-top:0 !important;}*/
 .vFileBrowseField {display:none;}
 </style>
 <input id="{{ final_attrs.id }}" type="text" class="vFileBrowseField" name="{{ final_attrs.name }}" value="{{ value }}" />
