--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -145,6 +145,8 @@
 
 
 
+
+
 /*.input_id_phone,
 .input_id_city,
 .input_id_image,
@@ -184,6 +186,8 @@ h5 {
 
 
 
+
+
 /*
 nav shit and etc, shop_tree display inline-block
 */
@@ -214,7 +218,7 @@ nav shit and etc, shop_tree display inline-block
 
 #categories li ul li a,
 #categories li ul li a:hover {
-    width: 70%;
+    width: 66%;
     padding: 3px 3px 4px 25px;
 }
 
@@ -263,6 +267,8 @@ p,
 
 
 
+
+
 /* dropdown menu */
 
 li.dropdown ul li ul {
@@ -299,15 +305,11 @@ li.dropdown ul li ul {
         border-bottom: 1px solid #5a5a5a;
     }
     .caret {
-        display: inline-block;
+        position: relative;
         float: right;
-        width: 0;
-        height: 0;
-        margin-left: 2px;
+        width: 20px;
         vertical-align: middle;
-        border-top: 4px solid;
-        border-right: 4px solid transparent;
-        border-left: 4px solid transparent;
+        border-top: 12px solid transparent;
     }
 }
 
@@ -478,6 +480,8 @@ ul.top-bar-menu li:hover i {
 
 
 
+
+
 /*.share-buttons ul a,
 .tags a,
 .tabs-nav li a,
@@ -616,6 +620,8 @@ a.menu-trigger i {
 
 
 
+
+
 /*.content-box.color-effect-1:hover h3,
 .content-box.color-effect-2:hover h3,
 .content-box.color-effect-3:hover h3,
@@ -695,6 +701,8 @@ a.menu-trigger i {
     background-color: #f5f5f5!important;
     color: #888!important;
 }
+
+
 
 
 
@@ -800,6 +808,8 @@ a.menu-trigger i {
 
 
 
+
+
 /* style 1 */
 
 .inputfile-1+label {
@@ -824,11 +834,13 @@ a.menu-trigger i {
     padding: 10px;
     /*opacity: 0.7;*/
 }
+
 .inputfile-1+label:hover span {
     background-color: #3acf87;
     color: white;
     opacity: 1;
 }
+
 .inputfile-1:focus+label,
 .inputfile-1.has-focus+label,
 .inputfile-1+label:hover {
@@ -836,6 +848,8 @@ a.menu-trigger i {
     border-top: 3px solid #3acf87;
     border-bottom: 3px solid #3acf87;
 }
+
+
 
 
 
@@ -850,6 +864,8 @@ a.menu-trigger i {
 .inputfile-4+label span {
     margin-left: 15px;
 }
+
+
 
 
 
@@ -888,6 +904,8 @@ a.menu-trigger i {
     height: 100%;
     fill: #f1e5e6;
 }
+
+
 
 
 
