--- a/theme/templates/admin/edit_inline/tabular.html
+++ b/theme/templates/admin/edit_inline/tabular.html
@@ -2,7 +2,7 @@
 <div class="inline-group _tabular" id="{{ inline_admin_formset.formset.prefix }}-group">
   <div class="inline-related {% if forloop.last %}last-related{% endif %}">
 {{ inline_admin_formset.formset.management_form }}
-    <fieldset class="module">
+    <fieldset class="module" {% if inline_admin_formset.opts.verbose_name_plural == 'Текущие вариации' %}style="display: none";{% endif %}>
     <div class="panel panel-midnightblue" data-widget='{"draggable": "false"}'>
       <div class="panel-heading">
       <h2 class="h4">{{ inline_admin_formset.opts.verbose_name_plural|capfirst }}</h2>
@@ -36,9 +36,10 @@
               <td class="original">
                 {% if inline_admin_form.original or inline_admin_form.show_url %}
                 <p>
-                {% if inline_admin_form.original %} {{ inline_admin_form.original }}{% endif %}
+                {# {% if inline_admin_form.original %} {{ inline_admin_form.original }}{% endif %} #}
                 {# {% if inline_admin_form.show_url %}<a href="{{ inline_admin_form.absolute_url }}">{% trans "View on site" %}</a>{% endif %} #}
-                  </p>{% endif %}
+                  </p>
+                {% endif %}
                 {% if inline_admin_form.needs_explicit_pk_field %}{{ inline_admin_form.pk_field.field }}{% endif %}
                 {{ inline_admin_form.fk_field.field }}
                 {% spaceless %}
@@ -83,7 +84,7 @@
 <script type="text/javascript">
 
 (function($) {
-  $("#{{ inline_admin_formset.formset.prefix }}-group .tabular.inline-related tbody tr").tabularFormset({
+  $("#{{ inline_admin_formset.formset.prefix }}-group tbody tr").tabularFormset({
     prefix: "{{ inline_admin_formset.formset.prefix }}",
     adminStaticPrefix: '{% static "admin/" %}',
     addText: "Добивть еще один элемент",
