--- a/theme/templates/pages/menus/dropdown.html
+++ b/theme/templates/pages/menus/dropdown.html
@@ -22,8 +22,12 @@
         
         {% endif %}>
             {{ page.title }}
-            {% if page.has_children_in_menu %}<b class="caret"></b>{% endif %}
         </a>
+        {% if page.has_children_in_menu %}
+            <!--<span class="fa-caret-down"></span>-->
+            <b class="top_nav caret"></b>
+        {% endif %}
+        
         {% if page.has_children_in_menu %}
             {% page_menu page %}
         {% endif %}
@@ -38,8 +42,10 @@
 <ul class="dropdown-menu">
     {% for page in page_branch %}
     {% if page.in_menu %}
-    <li class="{% if page.has_children_in_menu %}dropdown{% endif %} {% if page.is_current_or_ascendant %}active_branch{% endif %}">
-        <a class="{% if page.is_current%}current{% endif %}" href="{{ page.get_absolute_url }}">{{ page.title }}{% if page.has_children_in_menu %}<b class="caret"></b>{% endif %}  </a>
+    <li class="{% if page.has_children_in_menu %}dropdown{% endif %} {% if page.is_current_or_ascendant %}top_active_branch{% endif %}">
+        <a class="{% if page.is_current%}current{% endif %}" href="{{ page.get_absolute_url }}">{{ page.title }}
+        </a>
+        {% if page.has_children_in_menu %}<b class="top_nav caret"></b>{% endif %}
         {% if page.has_children_in_menu %}{% page_menu page %}{% endif %} 
     </li>
     {% endif %}
