--- a/theme/templates/accounts/includes/user_widget.html
+++ b/theme/templates/accounts/includes/user_widget.html
@@ -1,6 +1,6 @@
 {% load i18n mezzanine_tags accounts_tags theme_tags %}
-{% get_shop_products user as products %}
-{% get_user_blog_posts user as posts %}
+{# {% get_shop_products user as products %} #}
+{# {% get_user_blog_posts user as posts %} #}
     <ul class="tabs-nav my-account">
         <li class="active"><a href="#tab1">Публикации ({{posts|length}})</a></li>
         <li class=""><a href="#tab2">Товары ({{products|length}})</a></li>
